--- a/style.css
+++ b/style.css
@@ -23,3 +23,15 @@ img {
     border-radius: 50%;
     margin-top: -50px;
 }
+
+.contacts {
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+}
+
+.contacts li {
+    width: 30px;
+    display: inline-block;
+    padding: 20px 10px;
+}
