--- a/style.css
+++ b/style.css
@@ -23,11 +23,12 @@ h2 {
     margin: 0 auto;
     width: 600px;
     text-align: center;
-    box-shadow: rgba(0,0,0, 0.1) 0 0 20px;
-    border: 2px solid #aaa;
+    box-shadow: rgba(0,0,0, 0.1) 0 10px 10px;
+    border: 1px solid #aaa;
 }
 
 .card .avatar {
+    box-shadow: rgba(0,0,0, 0.1) 0 10px 10px;
     width: 100px;
     border-radius: 50%;
     margin-top: -50px;
@@ -43,4 +44,9 @@ h2 {
     width: 30px;
     display: inline-block;
     padding: 20px 10px;
+}
+
+.contacts li a img:hover {
+    opacity: 0.5;
+    transition: opactiy ease-in-out 0.2s;
 }
